# logator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  Resource.rc  fichier.c  fichier.h  fonction.c  fonction.h  log.c  log.h  logator  logator.cbp  logator.sln  logator.vcxproj  logator.vcxproj.filters  main.c  main.h  message.c  message.h  resource.h  ressource.h  tool.c  tool.h
