CMAKE_MINIMUM_REQUIRED(VERSION 3.7)

PROJECT(logator)

IF(MSVC)
    MESSAGE(STATUS"Microsoft Visual C")
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
    ADD_COMPILE_OPTIONS(/W4 /WX)
    SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /RTC1")
    SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /O2")
ELSEIF(MINGW)
    MESSAGE(STATUS "MinGW")
    ADD_COMPILE_OPTIONS(-Wall -Werror -pedantic-errors -O3)
    SET(CMAKE_EXE_LINKER_FLAGS  "-lucrt")
ELSEIF(UNIX)
    MESSAGE(STATUS "Linux")
    ADD_COMPILE_OPTIONS(-Wall -Werror -pedantic-errors -O3)
ELSE()
    MESSAGE(STATUS "platform not supported")
ENDIF()

ADD_EXECUTABLE(${PROJECT_NAME} main.c fonction.c fichier.c message.c Resource.rc)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ucrt)